--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "main": "server.js",
   "dependencies" : {
     "express" : "~4.0.0",
-	"twig" : "*"
+	"twig" : "~0.7.2",
+	"gpio": "~0.2.5",
+	"socket.io": "~1.1.0"
   }
 }
